
2005-10-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * sql.php, footer.inc.php: refresh left frame on view creation
    * left.php: view icon for views
    * libraries/left.js: dropped
    * libraries/function.js: tuned PMA_merkRowsInit():
      every table with class data now has mark and hover effect
    * css/phpmyadmin.css.php: nowrap for IE and pre for the rest

2005-10-19 Alexander M. Turek  <me@derrabus.de>
    * lang/*.inc.php, libraries/mysql_charsets.lib.php: Correct description
      for collations utf8_esperanto_ci, ucs2_esperanto_ci.
    * lang/german-*.inc.php: Updated some untranslated strings.

2005-10-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/bookmark.lib.php: PHP 5.1.0-dev compatibility

2005-10-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * footer.inc.php, index.php, server_databases.php, libraries/querywindow.js:
      fix problem not remembering selected server
    * libraries/tooltip.js, themes/*/theme_right.css.php:
      moved not always needed code out of event handler, fixed display with larger font
    * libraries/function.js, css/phpmyadmin.css.php:
      added mark and hover effect to every table of class data
    * libraries/sql_query_form.lib.php: open db link from querywindow in main frame
    * footer.inc.php, header.inc.php, libraries/tooltip.js:
      moved tooltip javascript include into header
    
2005-10-18 Michal Čihař  <michal@cihar.com>
    * libraries/relation.lib.php: Do not set database if not needed.
    * libraries/common.lib.php: Use common infrastructure for getting tables.
    * Documentation.html, config.default.php, libraries/select_lang.lib.php:
      Allow to limit list of shown languages (RFE #1328003).
    * libraries/common.lib.php: Fix URL detection when not called from top
      level directory (eg. transformations overview).
    * Documentation.html, config.default.php, export.php, import.php,