@@ -18,6 +18,7 @@ $Source$
     * libraries/function.js: tuned PMA_merkRowsInit():
       every table with class data now has mark and hover effect
     * css/phpmyadmin.css.php: nowrap for IE and pre for the rest
+    * css/phpmyadmin.css.php, server_status.php: css cleanup
 
 2005-10-19 Alexander M. Turek  <me@derrabus.de>
     * lang/*.inc.php, libraries/mysql_charsets.lib.php: Correct description
